--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="text-center w-full max-w-lg mx-auto">
             <!-- Profile Picture -->
             <img 
-                src="https://placehold.co/192x192/a3e635/1e293b?text=Your+Photo" 
+                src="https://manishvyaasa.github.io/my-website/assets/images/mypic.png" 
                 alt="Profile Picture" 
                 class="w-48 h-48 rounded-full mx-auto mb-6 border-4 border-white shadow-lg"
                 onerror="this.onerror=null;this.src='https://placehold.co/192x192/f87171/ffffff?text=Error';"
